# diedeadcode

./: .gitignore  .npmignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  install.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
benches/: large_codebase.rs
homebrew/: diedeadcode.rb
npm/cli-darwin-arm64/: package.json
npm/cli-darwin-x64/: package.json
npm/cli-linux-arm64/: package.json
npm/cli-linux-arm64-musl/: package.json
npm/cli-linux-x64/: package.json
npm/cli-linux-x64-musl/: package.json
npm/cli-win32-x64/: package.json
npm/diedeadcode/: README.md  package.json
npm/diedeadcode/scripts/: postinstall.js
scripts/: download-artifacts.sh  generate-npm-packages.mjs  publish-npm.sh
src/: lib.rs  main.rs
src/analysis/: mod.rs  project.rs
src/analysis/call_graph/: builder.rs  mod.rs  references.rs  symbols.rs
src/analysis/confidence/: mod.rs  patterns.rs  scorer.rs
src/analysis/deadness/: mod.rs  propagator.rs  transitive.rs
src/analysis/entry_points/: framework.rs  mod.rs  package_json.rs
src/cli/: mod.rs  output.rs
src/cli/commands/: analyze.rs  init.rs  mod.rs  watch.rs
src/config/: loader.rs  mod.rs  schema.rs
src/core/: error.rs  mod.rs  types.rs
src/plugins/: detector.rs  mod.rs  registry.rs
src/plugins/frameworks/: express.rs  jest.rs  mod.rs  nextjs.rs  vitest.rs
tests/integration/fixtures/basic/: classes.ts  index.ts  package.json  utils.ts
