[package]
name = "diedeadcode"
version = "0.1.0"
edition = "2021"
authors = ["Dean"]
description = "Conservative TypeScript dead code detection with transitive analysis and confidence scoring"
license = "MIT"
repository = "https://github.com/dean0x/diedeadcode"
keywords = ["typescript", "dead-code", "static-analysis", "lint"]
categories = ["development-tools", "command-line-utilities"]

[[bin]]
name = "ddd"
path = "src/main.rs"

[dependencies]
# Parsing & Analysis (oxc 0.99+)
oxc = { version = "0.99", features = ["full"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Config
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
serde_json = "1.0"

# Output
colored = "3"
tabled = "0.20"
indicatif = "0.17"

# Error handling
thiserror = "2.0"
miette = { version = "7.6", features = ["fancy"] }

# Utilities
glob = "0.3"
ignore = "0.4"
rayon = "1.11"
dashmap = "6"
regex-lite = "0.1"

[dev-dependencies]
insta = "1"
tempfile = "3"
criterion = "0.5"

[[bench]]
name = "large_codebase"
harness = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
